--- a/EasyOCR10/EasyOCR10.csproj
+++ b/EasyOCR10/EasyOCR10.csproj
@@ -126,6 +126,7 @@
     <Compile Include="ScanningDialog.xaml.cs">
       <DependentUpon>ScanningDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SoftwareBitmapExtention.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
